fixed header being covered

--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -1,4 +1,5 @@
 .header {
+    z-index: 10;
     display: flex;
     flex-direction: row;
     height: 10vh;
