--- a/frontend/src/components/search.module.css
+++ b/frontend/src/components/search.module.css
@@ -59,7 +59,7 @@
 .dropdown {
     top: 100%;
     left: 0;
-    z-index: 10;
+    z-index: 0;
     width: 40vw;
     height: 10rem;
     overflow-y: auto;
